Added required layout

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "jsx": "react",
+    "types": ["react-native"]
   },
   "include": [
     "**/*.ts",
