--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-  ]
+, "app/(auth)/SelectAvatar.jsx", "app/(auth)/_layout.jsx", "app/_layout.jsx", "app/index.jsx"  ]
 }
