--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/drawer": "^7.0.19",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/stack": "^7.0.18",
+    "eas-cli": "^16.1.0",
     "expo": "~52.0.15",
     "expo-blur": "~14.0.1",
     "expo-camera": "~16.0.18",
@@ -34,7 +35,9 @@
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-media-library": "~17.0.6",
+    "expo-print": "~14.0.3",
     "expo-router": "~4.0.11",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -49,13 +52,15 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-html-to-pdf": "^0.12.0",
     "react-native-image-picker": "^7.2.2",
+    "react-native-mlkit-ocr": "^0.3.0",
+    "react-native-permissions": "^5.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-vision-camera": "^4.6.4",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "expo-print": "~14.0.3",
-    "expo-sharing": "~13.0.1"
+    "expo-dev-client": "~5.0.15"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
