--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "expo-linear-gradient": "^14.0.1",
     "expo-linking": "~7.0.3",
     "expo-media-library": "~17.0.6",
+    "expo-print": "~14.0.3",
     "expo-router": "~4.0.11",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.13",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -45,6 +47,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-document-scanner-plugin": "^1.0.1",
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-html-to-pdf": "^0.12.0",
@@ -53,9 +56,7 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.1.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
-    "expo-print": "~14.0.3",
-    "expo-sharing": "~13.0.1"
+    "react-native-webview": "13.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
