--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "@react-navigation/stack": "^7.2.9",
     "expo": "~52.0.43",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-document-picker": "~13.0.3",
+    "expo-file-system": "~18.0.12",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
+    "expo-media-library": "~17.0.6",
     "expo-print": "~14.0.3",
     "expo-router": "~4.0.20",
     "expo-splash-screen": "~0.29.22",
