--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "expo-media-library": "~17.0.6",
     "expo-print": "~14.0.3",
     "expo-router": "~4.0.20",
+    "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
